[metadata]
name = ctctools
version = 0.0.1
author = Alan R. Lowe
author_email = a.lowe@ucl.ac.uk
url = https://github.com/lowe-lab-ucl/ctc-tools
description = Load CTC data
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
  Programming Language :: C++
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Framework :: napari
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.8
install_requires =
  dask
  dask-image
  numpy
  pandas
  scikit-image